--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "testing out the stripe api",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Ohn",
@@ -24,6 +25,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "stripe": "^8.49.0"
