--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "testing out the stripe api",
   "main": "index.js",
   "engines": {
-    "node": "12.18.3",
-    "npm": "6.14.6"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "node src/server.js",
